# faber

./: .gitignore  .mcp.json  .worktreeinclude  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION-PLAN-backlog-management.md  IMPLEMENTATION-SUMMARY-label-automation.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  README.md  codex.md  jest.config.js  package-lock.json  package.json  pr_body.md  test-file.txt  tsconfig.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.fractary/: .gitignore  config.yaml  plan.md
.husky/: pre-commit
.opencode/: package.json
cli/: .eslintrc.json  IMPLEMENTATION-STATUS.md  LICENSE  README.md  jest.config.js  package.json  test-imports.js  tsconfig.json
docs/: MIGRATION-FABER-FORGE.md  MIGRATION.md  PROJECT_IMPLEMENTATION_GUIDE.md  README.md  api-reference.md  github-app-setup.md  integration-guide.md  migration-settings-to-config.md  python-sdk-integration.md  step-hierarchy-guidelines.md
python/: README.md  pyproject.toml
scripts/: bump-versions.js  bump-versions.test.js
sdk/py/: README.md  pyproject.toml  pytest.ini
sdk/py/faber/: __init__.py
sdk/py/faber/accessibility/: __init__.py  compiler.py  loader.py  schemas.py
sdk/py/faber/accessibility/examples/: software-dev.yaml
sdk/py/faber/agents/: __init__.py  architect.py  base.py  build.py  cached_claude_agent.py  cached_context.py  evaluate.py  frame.py  release.py
sdk/py/faber/api/: __init__.py  config.py  types.py  workflow.py
sdk/py/faber/approval/: queue.py
sdk/py/faber/cli/: README.md  deprecation.py
sdk/py/faber/cost/: __init__.py  tracker.py
sdk/py/faber/definitions/: README.md  agent_factory.py  api.py  converters.py  registry.py  schemas.py
sdk/py/faber/primitives/: __init__.py
sdk/py/faber/primitives/logs/: manager.py
sdk/py/faber/primitives/repo/: manager.py
sdk/py/faber/primitives/spec/: manager.py
sdk/py/faber/primitives/work/: manager.py
sdk/py/faber/primitives/work/providers/: base.py  github.py
sdk/py/faber/tools/: spec_tools.py
sdk/py/faber/workflows/: __init__.py  config.py  graph.py  state.py
sdk/py/tests/: __init__.py  conftest.py  test_api.py  test_approval_queue.py  test_workflow_config.py
sdk/py/tests/_broken/: test_cost_tracker.py  test_workflow_state.py
sdk/py/tests/test_definitions/: test_schemas.py
specs/: FABER-SDK-spec-config-initialization.md  MIGRATION-SUMMARY.md  (+42 more)
src/: api.ts  (+4 more)
(+1159 files in other folders)
